--- a/package.json
+++ b/package.json
@@ -10,15 +10,22 @@
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.6.0",
     "react-redux": "^7.2.6",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
+    "react-share": "^4.4.0",
+    "react-spring": "^9.4.4",
     "reactstrap": "^9.0.1",
     "redux": "^4.1.2",
+    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.3",
     "swiper": "^8.0.7",
+    "use-window-scroll-hook": "^1.0.21",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
