--- a/package.json
+++ b/package.json
@@ -4,9 +4,18 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.4.0",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.1",
+    "@popperjs/core": "^2.11.4",
+    "@react-hook/window-scroll": "^1.3.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@use-gesture/react": "^10.2.10",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
