--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.4",
+    "react-daum-postcode": "^3.0.1",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.6.0",
     "react-redux": "^7.2.6",
