--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
+    "react-cookies": "^0.1.1",
     "react-copy-to-clipboard": "^5.0.4",
+    "react-daum-postcode": "^3.0.1",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.4",
     "react-particles-js": "^3.6.0",
     "react-redux": "^7.2.6",
     "react-responsive": "^9.0.0-beta.6",
