--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-daum-postcode": "^3.0.1",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
+    "react-icons": "^4.3.1",
     "react-particles-js": "^3.6.0",
     "react-redux": "^7.2.6",
     "react-responsive": "^9.0.0-beta.6",
